--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "project2",
+  "name": "Test_Usingexpressapp",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "dependencies": {
     "body-parse": "^0.1.0",
-    "express-handlebars": "^3.1.0",
     "express": "^4.17.1",
+    "express-handlebars": "^3.1.0",
+    "materialize": "^1.0.0",
     "mysql2": "^2.1.0",
     "nodemon": "^2.0.2",
     "sequelize": "^5.21.3",
