reset the project using one table, creating all the file, etc, still the display result when clicking in one of the cocktai not working

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Test_Usingexpressapp",
+  "name": "Test_oneTable",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
